crates/reinhardt-core/macros/tests/ui/model_enum/fail/missing_repr.rs
use reinhardt_macros::ModelEnum;

#[derive(ModelEnum)]
enum MissingRepr {
	#[model_enum(value = "queued")]
	Queued,
}

fn main() {}
